# minpost

./: .gitignore  README.md  api_usage.md  pyproject.toml  requirements.txt
examples/: train.py
minpost/: __init__.py  data.py  grpo.py  rewards.py  trainer.py  utils.py
notebooks/: getting_started.ipynb
notebooks/playground/: post-training-an-llm-for-reasoning-with-grpo-in-trl-hf-tutorial.ipynb
tests/: __init__.py  test_trainer.py
